--- a/index1.html
+++ b/index1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+  <h1>test</h1>
     <div id="back">
       <div id = "dbtn">
         <button id ="btn" onclick="start()">Start</button>
